# magos_registry_service

./: .dockerignore  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  orgs.txt  orgs_2.txt  pyproject.toml
app/: main.py
app/core/: __init__.py  client.py  config.py  decorators.py  dependencies.py  exceptions.py  logger.py  logger_config.py  middleware.py
app/model/: __init__.py  collection_point.py  gateway_request.py  lab_complex.py  med_service.py  patinet.py  paytype.py  research.py  timetable.py  timetable_request.py
app/route/: __init__.py  assist.py  debug.py  health.py  patient.py  registry.py  service.py  timetable.py
app/service/: __init__.py
app/service/assist/: colletion_point.py  patient.py  pay_type.py
app/service/gateway/: gateway.py
app/service/lab_complex/: colletion_point.py  complex_service.py
app/service/med_service/: fetch.py  med_service.py
app/service/research/: fetch.py  research.py
app/service/timetable/: fetch.py  parser.py
app/temp_json/: __init__.py  time_table_json.py
docker-files/: Dockerfile.app
